# msas_enrich_2023

./: .gitignore  mid360_config_lio.json  readme.md
src/jackal/jackal_control/config/: control.yaml  ekf.yaml  robot_localization.yaml  teleop_ps4.yaml
src/jackal/jackal_control/launch/: ekf.launch  teleop.launch
src/jackal/jackal_description/urdf/: jackal.urdf.xacro
src/jackal_robot/jackal_base/config/: base.yaml
src/jackal_robot/jackal_base/launch/: base.launch
src/jackal_robot/jackal_bringup/launch/: accessories.launch  record.launch  upstart-enrich2023.launch  upstart-lm100-velo-pointgrey.launch  upstart.launch
src/jackal_robot/jackal_bringup/launch/include/: amcl.launch  gmapping.launch  lms1xx.launch  m3d.launch  move_base.launch  odo_vr.launch  rviz.launch  serve_map.launch  xsens_driver2.launch
src/jackal_robot/jackal_bringup/params/: base_local_planner_params.yaml  costmap_common_params.yaml  twist_mux.yaml
src/mandeye/: CMakeLists.txt  package.xml
src/mandeye/src/: mandeye.cpp
src/mandeye_unicorn/: CMakeLists.txt  package.xml
src/mandeye_unicorn/src/: base_station_unicorn.cpp  mandeye_unicorn.cpp  mandeye_unicorn.cpp.save  mandeye_unicorn_imu.cpp  structures.h  transformations.h
src/quasi_autonomy/: CMakeLists.txt  package.xml
src/quasi_autonomy/launch/: move_base_dwa_velo.launch
src/quasi_autonomy/scripts/: quasiAutonomy (copy).py  quasiAutonomy.py
